--- a/templates/page.html
+++ b/templates/page.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="/static/css/main.css" rel="stylesheet">
         <script async="true" src="/static/js/main.js"></script>
         <meta charset="UTF-8" />
     </head>
-    <header>
-            <img class="grandpy" src="/static/grandpere_pipe.jpg">
-            <span class="banner">
-                <p class="site-name">GrandPy</p>
-                <p class="headline">Votre papy de poche!</p>
-            </span>
-    </header>
     <body>
-        <form class="main-field">
-                <input class="question" type="text" placeholder="Posez votre question à GrandPy" size=100>
-                <input class="button" type="submit" value="Go!">
-        </form>
-        <span class="answer"></span>
-    </body>
-    <footer>
-        <div class="hyperlinks">
-            <label class="name">Georges Morera</label>
-            <a href="https://github.com/GMBAMorera/Projet_7"><img id="logo-git" src="/static/logo-github.png"></a>
-            <a href="https://www.linkedin.com/in/georges-morera/"><img id="logo-linkedin" src="/static/logo-linkedin.png"></a>
+        <div class="container-fluid">
+            <div class="row header">
+                <div class="col-2">
+                    <img class="grandpy" src="/static/grandpere_pipe.jpg">
+                </div>
+                <div class="col-10 banner">
+                    <p class="site-name">GrandPy</p>
+                    <p class="headline">Votre papy de poche!</p>
+                </div>
+            </div>
+            <div class="row body">
+                <form>
+                    <input class="question" type="text" placeholder="Posez votre question à GrandPy" size=100>
+                    <input class="button" type="submit" value="Go!">
+                </form>
+                <div class="row answer"></div>
+            </div>
+            <div class="row footer">
+                <a href="https://www.linkedin.com/in/georges-morera/"><img id="logo-linkedin" src="/static/logo-linkedin.png"></a>
+                <a href="https://github.com/GMBAMorera/Projet_7"><img id="logo-git" src="/static/logo-github.png"></a>
+                <label class="name">Georges Morera  :</label>
+            </div>
         </div>
-    </footer>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    </body>
 </html>
