--- a/templates/page.html
+++ b/templates/page.html
@@ -17,13 +17,12 @@
                     <p class="headline">Votre papy de poche!</p>
                 </div>
             </div>
-            <div class="row body">
-                <form>
-                    <input class="question" type="text" placeholder="Posez votre question à GrandPy" size=100>
-                    <input class="button" type="submit" value="Go!">
-                </form>
-                <div class="row answer"></div>
+            <div class="row body-answer">
+                <div class="col-4 questions"></div>
+                <div class="col-4 answer"></div>
+                <div class="col-4 map"></div>
             </div>
+            <div class="row body-question"></div>
             <div class="row footer">
                 <a href="https://www.linkedin.com/in/georges-morera/"><img id="logo-linkedin" src="/static/logo-linkedin.png"></a>
                 <a href="https://github.com/GMBAMorera/Projet_7"><img id="logo-git" src="/static/logo-github.png"></a>
