new .html version

--- a/templates/page.html
+++ b/templates/page.html
@@ -24,8 +24,7 @@
                 </form>
             </div>
             <div class="row body-answer">
-                <div class="col-8 col-md-4 questions text-zone"></div>
-                <div class="col-0 col-md-4 answer text-zone"></div>
+                <div class="col-12 qanda text-zone"></div>
                 <div class="col-4" id="map"><script defer async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiZZLLO9-voy2LLGdVTiWjl-Rn2JGSLPo&callback=initMap" class="map-code"></script></div>
             </div>
             <div class="row footer">
