--- a/static/css/main.css
+++ b/static/css/main.css
@@ -53,6 +53,11 @@ body{
     flex-grow: 10;
 }
 
+.qanda{
+    min-height: 100vh;
+    overflow-y: scroll;
+}
+
 .text-zone{
     border: 2px solid #999;
     display: flex;
