--- a/templates/page.html
+++ b/templates/page.html
@@ -25,7 +25,7 @@
             </div>
             <div class="row body-answer">
                 <div class="col-12 qanda text-zone"></div>
-                <div class="col-4" id="map"><script defer async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiZZLLO9-voy2LLGdVTiWjl-Rn2JGSLPo&callback=initMap" class="map-code"></script></div>
+                <div id="map"><script defer async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCiZZLLO9-voy2LLGdVTiWjl-Rn2JGSLPo&callback=initMap" class="map-code"></script></div>
             </div>
             <div class="row footer">
                 <a href="https://www.linkedin.com/in/georges-morera/"><img id="logo-linkedin" src="/static/logo-linkedin.png"></a>
