--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,3 @@
-html{
-    min-height: 100vh;
-}
-
-body{
-    min-height: 100vh;
-}
-
 .container-fluid{
     display: flex;
     flex-direction: column;
@@ -19,11 +11,6 @@ body{
 /* Header */
 .header{
     background-color: blueviolet;
-}
-
-
-.grandpy{
-    height: 121px;
 }
 
 .banner{
@@ -51,6 +38,9 @@ body{
 
 .body-answer{
     flex-grow: 10;
+}
+
+.qanda{
 }
 
 .text-zone{
